--- a/odoo14/pantaq/views/purchase_views.xml
+++ b/odoo14/pantaq/views/purchase_views.xml
@@ -191,7 +191,7 @@
                                     <field name="analytic_tag_ids" groups="analytic.group_analytic_tags"
                                            widget="many2many_tags" options="{'color_field': 'color'}"/>
                                     <field name="product_qty"/>
-                                    <!--                                    <field name="product_uom_category_id" invisible="1"/>-->
+                                    <field name="product_uom_category_id" invisible="1"/>
 
                                     <field name="qty_received"
                                            attrs="{'column_invisible': [('parent.state', 'not in', ('purchase', 'done'))]}"/>
@@ -224,6 +224,7 @@
                                 </tree>
                                 <form string="Order Line">
                                     <sheet>
+                                        <field name="product_uom_category_id" invisible="1"/>
                                         <group>
                                             <group>
                                                 <field name="product_id"
@@ -472,9 +473,9 @@
                             help="If a purchase order is done, you cannot modify it manually anymore. You will not be able to receive invoices anymore for this purchase order."/>
                     <button name="button_unlock" type="object" string="Unlock" states="done"
                             groups="purchase.group_purchase_manager"/>
-<!--                    <button name="confirm_reminder_mail" string="Confirm Receipt Date" type="object"-->
-<!--                            attrs="{'invisible': ['|','|', ('state', 'not in', ('purchase', 'done')), ('mail_reminder_confirmed', '=', True), ('date_planned', '=', False)]}"-->
-<!--                            groups="base.group_no_one"/>-->
+                    <!--                    <button name="confirm_reminder_mail" string="Confirm Receipt Date" type="object"-->
+                    <!--                            attrs="{'invisible': ['|','|', ('state', 'not in', ('purchase', 'done')), ('mail_reminder_confirmed', '=', True), ('date_planned', '=', False)]}"-->
+                    <!--                            groups="base.group_no_one"/>-->
 
                     <field name="state" widget="statusbar" statusbar_visible="draft,sent,purchase,done" readonly="1"/>
                 </header>
@@ -508,25 +509,27 @@
                             <field name="company_id" groups="base.group_multi_company" options="{'no_create': True}"/>
                             <field name="lead_id"/>
                         </group>
-<!--                        <label for="receipt_reminder_email" invisible='1'/>-->
+                        <!--                        <label for="receipt_reminder_email" invisible='1'/>-->
                     </group>
-<!--                    <div name="reminder" class="o_row" groups='purchase.group_send_reminder'-->
-<!--                         title="Automatically send a confirmation email to the vendor X days before the expected receipt date, asking him to confirm the exact date.">-->
-<!--                        <field name="receipt_reminder_email"/>-->
-<!--                    </div>-->
+                    <!--                    <div name="reminder" class="o_row" groups='purchase.group_send_reminder'-->
+                    <!--                         title="Automatically send a confirmation email to the vendor X days before the expected receipt date, asking him to confirm the exact date.">-->
+                    <!--                        <field name="receipt_reminder_email"/>-->
+                    <!--                    </div>-->
                     <notebook>
                         <page string="Products">
                             <field name="order_line">
                                 <tree string="Purchase Order Lines" editable="bottom">
                                     <field name="product_type" invisible="1"/>
+                                    <field name="product_uom_category_id" invisible="1"/>
+
                                     <field name="product_id" required="1" context="{'partner_id':parent.partner_id}"
                                            string="Part Number"/>
                                     <field name="manufacturer_name" readonly="True"/>
                                     <field name="name" string="Product Description"/>
-<!--                                    <div name="date_planned_div" class="o_row">-->
+                                    <!--                                    <div name="date_planned_div" class="o_row">-->
 
-<!--                                        <field name="date_planned"/>-->
-<!--                                    </div>-->
+                                    <!--                                        <field name="date_planned"/>-->
+                                    <!--                                    </div>-->
 
                                     <field name="company_id" groups="base.group_multi_company"
                                            options="{'no_create': True}" invisible="1"/>
@@ -548,6 +551,8 @@
                                 <form string="Purchase Order Line">
                                     <sheet>
                                         <field name="state" invisible="1"/>
+                                        <field name="product_uom_category_id" invisible="1"/>
+
                                         <group>
                                             <group>
                                                 <field name="product_id"
@@ -663,7 +668,7 @@
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">purchase.order</field>
         <field name="view_mode">tree,kanban,form,pivot,graph,calendar</field>
-<!--        <field name="view_id" ref="purchase_order_form_inherited_pantaq" />-->
+        <!--        <field name="view_id" ref="purchase_order_form_inherited_pantaq" />-->
         <field name="context">{'search_default_todo':1, 'show_purchase': True, 'default_po_type':'rfq',
             'po_type':'purchase'}
         </field>
