--- a/odoo14/pantaq/views/crm_views.xml
+++ b/odoo14/pantaq/views/crm_views.xml
@@ -35,78 +35,101 @@
             Kanban (Opportunity):
                 Overridden:
         -->
-            <record id="view_crm_enquiry_kanban" model="ir.ui.view">
-                <field name="name">crm.lead.kanban.lead</field>
-                <field name="model">crm.lead</field>
-                <field name="priority" eval="1"/>
-                <field name="arch" type="xml">
-                    <kanban default_group_by="stage_id" class="o_kanban_small_column"
+        <record id="view_crm_enquiry_kanban" model="ir.ui.view">
+            <field name="name">crm.lead.kanban.lead</field>
+            <field name="model">crm.lead</field>
+            <field name="priority" eval="1"/>
+            <field name="arch" type="xml">
+                <kanban default_group_by="stage_id" class="o_kanban_small_column"
                         archivable="false">
-                        <field name="stage_id" readonly="1" options='{"group_by_tooltip": {"requirements": "Description", "legend_priority": "Use of stars"}}'/>
-                        <field name="color"/>
-                        <field name="priority"/>
-        <!--                <field name="planned_revenue"/>-->
-        <!--                <field name="kanban_state"/>-->
-        <!--                <field name="activity_date_deadline"/>-->
-        <!--                <field name="user_email"/>-->
-                        <field name="user_id"/>
-        <!--                <field name="partner_address_email"/>-->
-        <!--                <field name="message_needaction_counter"/>-->
-                        <field name="partner_id"/>
-        <!--                <field name="activity_summary"/>-->
-                        <field name="active"/>
-        <!--                <field name="company_currency"/>-->
-        <!--                <field name="activity_state" />-->
-        <!--                <field name="activity_ids" />-->
-        <!--                <progressbar field="activity_state" colors='{"planned": "success", "today": "warning", "overdue": "danger"}' sum_field="planned_revenue" help="This bar allows to filter the opportunities based on scheduled activities."/>-->
-                        <templates>
-                            <t t-name="kanban-box">
-                                <div t-attf-class="#{kanban_color(record.color.raw_value)} oe_kanban_global_click">
-                                    <div class="o_dropdown_kanban dropdown">
+                    <field name="stage_id" readonly="1"
+                           options='{"group_by_tooltip": {"requirements": "Description", "legend_priority": "Use of stars"}}'/>
+                    <field name="color"/>
+                    <field name="priority"/>
+                    <!--                <field name="planned_revenue"/>-->
+                    <!--                <field name="kanban_state"/>-->
+                    <!--                <field name="activity_date_deadline"/>-->
+                    <!--                <field name="user_email"/>-->
+                    <field name="user_id"/>
+                    <!--                <field name="partner_address_email"/>-->
+                    <!--                <field name="message_needaction_counter"/>-->
+                    <field name="partner_id"/>
+                    <!--                <field name="activity_summary"/>-->
+                    <field name="active"/>
+                    <!--                <field name="company_currency"/>-->
+                    <!--                <field name="activity_state" />-->
+                    <!--                <field name="activity_ids" />-->
+                    <!--                <progressbar field="activity_state" colors='{"planned": "success", "today": "warning", "overdue": "danger"}' sum_field="planned_revenue" help="This bar allows to filter the opportunities based on scheduled activities."/>-->
+                    <templates>
+                        <t t-name="kanban-box">
+                            <div t-attf-class="#{kanban_color(record.color.raw_value)} oe_kanban_global_click">
+                                <div class="o_dropdown_kanban dropdown">
 
-                                        <a class="dropdown-toggle o-no-caret btn" role="button" data-toggle="dropdown" href="#" aria-label="Dropdown menu" title="Dropdown menu">
-                                            <span class="fa fa-ellipsis-v"/>
-                                        </a>
-                                        <div class="dropdown-menu" role="menu">
-                                            <t t-if="widget.editable"><a role="menuitem" type="edit" class="dropdown-item">Edit</a></t>
-                                            <t t-if="widget.deletable"><a role="menuitem" type="delete" class="dropdown-item">Delete</a></t>
-                                            <ul class="oe_kanban_colorpicker" data-field="color"/>
-                                        </div>
+                                    <a class="dropdown-toggle o-no-caret btn" role="button" data-toggle="dropdown"
+                                       href="#" aria-label="Dropdown menu" title="Dropdown menu">
+                                        <span class="fa fa-ellipsis-v"/>
+                                    </a>
+                                    <div class="dropdown-menu" role="menu">
+                                        <t t-if="widget.editable">
+                                            <a role="menuitem" type="edit" class="dropdown-item">Edit</a>
+                                        </t>
+                                        <t t-if="widget.deletable">
+                                            <a role="menuitem" type="delete" class="dropdown-item">Delete</a>
+                                        </t>
+                                        <ul class="oe_kanban_colorpicker" data-field="color"/>
                                     </div>
-                                    <div class="oe_kanban_content">
-                                        <div>
-                                            <strong><field name="enq_number"/></strong>
-                                        </div>
-                                        <div>
-                                            <strong><field name="name"/></strong>
-                                        </div>
-                                        <div>
-                                            <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
-                                        </div>
-                                        <div class="text-muted o_kanban_record_subtitle">
-                                            <t t-if="record.planned_revenue.raw_value"><field name="planned_revenue" widget="monetary" options="{'currency_field': 'company_currency'}"/><span t-if="record.partner_id.value">,</span></t> <span t-if="record.partner_id.value"> <t t-esc="record.partner_id.value"/></span>
-                                        </div>
-
-                                        <div class="o_kanban_record_bottom">
-                                            <div class="oe_kanban_bottom_left">
-                                                <field name="priority" widget="priority" groups="base.group_user"/>
-                                                <t t-if="record.message_needaction_counter.raw_value">
-                                                    <span role="alert" class='oe_kanban_mail_new' title='Unread Messages'><i class='fa fa-comments' aria-label="Unread messages" role="img"/><t t-raw="record.message_needaction_counter.raw_value"/></span>
-                                                </t>
-                                                <field name="activity_ids" widget="kanban_activity"/>
-                                            </div>
-                                            <div class="oe_kanban_bottom_right">
-                                                <img t-att-src="kanban_image('res.users', 'image_small', record.user_id.raw_value)" t-att-title="record.user_id.value" t-att-alt="record.user_id.value" width="24" height="24" class="oe_kanban_avatar"/>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="oe_clear"/>
                                 </div>
-                            </t>
-                        </templates>
-                    </kanban>
-                </field>
-            </record>
+                                <div class="oe_kanban_content">
+                                    <div>
+                                        <strong>
+                                            <field name="enq_number"/>
+                                        </strong>
+                                    </div>
+                                    <div>
+                                        <strong>
+                                            <field name="name"/>
+                                        </strong>
+                                    </div>
+                                    <div>
+                                        <field name="tag_ids" widget="many2many_tags"
+                                               options="{'color_field': 'color'}"/>
+                                    </div>
+                                    <div class="text-muted o_kanban_record_subtitle">
+                                        <t t-if="record.planned_revenue.raw_value">
+                                            <field name="planned_revenue" widget="monetary"
+                                                   options="{'currency_field': 'company_currency'}"/>
+                                            <span t-if="record.partner_id.value">,</span>
+                                        </t>
+                                        <span t-if="record.partner_id.value">
+                                            <t t-esc="record.partner_id.value"/>
+                                        </span>
+                                    </div>
+
+                                    <div class="o_kanban_record_bottom">
+                                        <div class="oe_kanban_bottom_left">
+                                            <field name="priority" widget="priority" groups="base.group_user"/>
+                                            <t t-if="record.message_needaction_counter.raw_value">
+                                                <span role="alert" class='oe_kanban_mail_new' title='Unread Messages'>
+                                                    <i class='fa fa-comments' aria-label="Unread messages" role="img"/>
+                                                    <t t-raw="record.message_needaction_counter.raw_value"/>
+                                                </span>
+                                            </t>
+                                            <field name="activity_ids" widget="kanban_activity"/>
+                                        </div>
+                                        <div class="oe_kanban_bottom_right">
+                                            <img t-att-src="kanban_image('res.users', 'image_small', record.user_id.raw_value)"
+                                                 t-att-title="record.user_id.value" t-att-alt="record.user_id.value"
+                                                 width="24" height="24" class="oe_kanban_avatar"/>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="oe_clear"/>
+                            </div>
+                        </t>
+                    </templates>
+                </kanban>
+            </field>
+        </record>
 
         <!--
             Lead Tree (Opportunity):
@@ -514,12 +537,13 @@
             <field name="model">crm.lead</field>
             <field name="inherit_id" ref="crm.view_crm_case_opportunities_filter"/>
             <field name="arch" type="xml">
-                <field name="name" position="attributes">
-                    <attribute name="string">Enquiry</attribute>
-                </field>
                 <field name="name" position="after">
                     <field name="enq_number"/>
                 </field>
+                <field name="name" position="attributes">
+                    <attribute name="string">Enquiry</attribute>
+                </field>
+
                 <filter name="assigned_to_me" position="replace">
                     <filter string="Assigned to me" name="assigned_to_me" domain="[('assign_id', '=', uid)]"
                             help="Enquiries that are assigned to me"/>
@@ -552,7 +576,7 @@
                 'stage_type': 'opportunity',
                 'default_type': 'opportunity',
                 'default_user_id': uid,
-                'search_default_assigned_to_me': 0,
+                <!--                'search_default_assigned_to_me': 0,-->
                 }
             </field>
             <field name="search_view_id" ref="pantaq.view_crm_enquiry_search"/>
