--- a/odoo14/pantaq/views/purchase_views.xml
+++ b/odoo14/pantaq/views/purchase_views.xml
@@ -755,10 +755,12 @@
     <!--
         Request for Quotation
     -->
-    <menuitem action="action_rfqprodcompare_form" id="menu_action_pq_rfqprodcompare"
+    <!--    <menuitem action="action_make_internalQtn4Prods" id="menu_action_pq_rfqprodcompare"-->
+    <!--              parent="purchase.menu_procurement_management" name="RFQ Products price Compare"-->
+    <!--              sequence="9"/>-->
+    <menuitem action="action_make_internalQtn4Prods" id="menu_action_pq_rfqprodcompare"
               parent="purchase.menu_procurement_management" name="RFQ Products price Compare"
-              sequence="3"/>
-
+              sequence="2"/>
 
     <!--
         Create IQ : (Client action)
@@ -766,7 +768,7 @@
     -->
     <record id="action_make_internalQtn4Prods" model="ir.actions.server">
         <field name="name">Create Internal Quotation</field>
-        <field name="model_id" ref="model_pq_wiz_rfq_productcompare_lines"/>
+        <field name="model_id" ref="pantaq.model_pq_wiz_rfq_productcompare_lines"/>
         <field name="binding_model_id" ref="pantaq.model_pq_wiz_rfq_productcompare_lines"/>
         <field name="state">code</field>
         <field name="code">
