--- a/odoo14/pantaq/views/crm_views.xml
+++ b/odoo14/pantaq/views/crm_views.xml
@@ -42,17 +42,17 @@
             <field name="arch" type="xml">
                 <kanban default_group_by="stage_id" class="o_kanban_small_column"
                         archivable="false">
-                    <field name="stage_id" readonly="1"
-                           options='{"group_by_tooltip": {"requirements": "Description", "legend_priority": "Use of stars"}}'/>
+                    <field name="stage_id" readonly="1"/>
+                    <!--                           options='{"group_by_tooltip": {"requirements": "Description", "legend_priority": "Use of stars"}}'/>-->
                     <field name="color"/>
                     <field name="priority"/>
-                    <!--                <field name="planned_revenue"/>-->
+                    <field name="planned_revenue"/>
                     <!--                <field name="kanban_state"/>-->
                     <!--                <field name="activity_date_deadline"/>-->
                     <!--                <field name="user_email"/>-->
                     <field name="user_id"/>
                     <!--                <field name="partner_address_email"/>-->
-                    <!--                <field name="message_needaction_counter"/>-->
+                    <field name="message_needaction_counter"/>
                     <field name="partner_id"/>
                     <!--                <field name="activity_summary"/>-->
                     <field name="active"/>
@@ -540,9 +540,9 @@
                 <field name="name" position="after">
                     <field name="enq_number"/>
                 </field>
-                <field name="name" position="attributes">
-                    <attribute name="string">Enquiry</attribute>
-                </field>
+                <!--                <field name="enq_number" position="attributes">-->
+                <!--                    <attribute name="string">Enquiry</attribute>-->
+                <!--                </field>-->
 
                 <filter name="assigned_to_me" position="replace">
                     <filter string="Assigned to me" name="assigned_to_me" domain="[('assign_id', '=', uid)]"
@@ -552,16 +552,16 @@
             </field>
         </record>
 
-        <record model="ir.ui.view" id="view_crm_enquiry_graph">
-            <field name="name">crm.lead.view.graph</field>
-            <field name="model">crm.lead</field>
-            <field name="inherit_id" ref="crm.crm_lead_view_graph"/>
-            <field name="arch" type="xml">
-                <field name="user_id" position="replace">
-                    <field name="enq_number" type="row"/>
-                </field>
-            </field>
-        </record>
+        <!--        <record model="ir.ui.view" id="view_crm_enquiry_graph">-->
+        <!--            <field name="name">crm.lead.view.graph</field>-->
+        <!--            <field name="model">crm.lead</field>-->
+        <!--            <field name="inherit_id" ref="crm.crm_lead_view_graph"/>-->
+        <!--            <field name="arch" type="xml">-->
+        <!--                <field name="name" position="replace">-->
+        <!--                    <field name="enq_number" type="row"/>-->
+        <!--                </field>-->
+        <!--            </field>-->
+        <!--        </record>-->
 
         <!--
             Lead Menu (Opportunity):
@@ -610,21 +610,21 @@
         <record id="crm.crm_lead_opportunities_view_tree" model="ir.actions.act_window.view">
             <field name="sequence" eval="1"/>
             <field name="view_mode">tree</field>
-            <field name="view_id" ref="view_crm_enquiry_tree"/>
+            <!--            <field name="view_id" ref="view_crm_enquiry_tree"/>-->
             <field name="act_window_id" ref="crm.crm_case_tree_view_oppor"/>
         </record>
 
         <record id="crm.crm_lead_view_graph" model="ir.actions.act_window.view">
             <field name="sequence" eval="3"/>
             <field name="view_mode">graph</field>
-            <field name="view_id" ref="pantaq.view_crm_enquiry_graph"/>
+            <!--            <field name="view_id" ref="pantaq.view_crm_enquiry_graph"/>-->
             <field name="act_window_id" ref="crm.crm_case_tree_view_oppor"/>
         </record>
 
         <record id="crm.crm_lead_view_pivot" model="ir.actions.act_window.view">
             <field name="sequence" eval="4"/>
             <field name="view_mode">pivot</field>
-            <field name="view_id" ref="crm.crm_lead_view_pivot"/>
+            <!--            <field name="view_id" ref="crm.crm_lead_view_pivot"/>-->
             <field name="act_window_id" ref="crm.crm_case_tree_view_oppor"/>
         </record>
 
