--- a/odoo14/pantaq/views/crm_views.xml
+++ b/odoo14/pantaq/views/crm_views.xml
@@ -42,8 +42,8 @@
             <field name="arch" type="xml">
                 <kanban default_group_by="stage_id" class="o_kanban_small_column"
                         archivable="false">
-                    <field name="stage_id" readonly="1"/>
-                    <!--                           options='{"group_by_tooltip": {"requirements": "Description", "legend_priority": "Use of stars"}}'/>-->
+                    <field name="stage_id" readonly="1"
+                           options='{"group_by_tooltip": {"requirements": "Description"}}'/>
                     <field name="color"/>
                     <field name="priority"/>
                     <field name="planned_revenue"/>
