--- a/odoo14/pantaq/views/purchase_views.xml
+++ b/odoo14/pantaq/views/purchase_views.xml
@@ -506,6 +506,7 @@
                             />
                             <field name="partner_ref"/>
                             <field name="currency_id" groups="base.group_multi_currency"/>
+<!--                            <field name="rfq_ref" attrs="{'invisible': [('rfq_ref','=',False)]}"/>-->
                         </group>
                         <group>
                             <field name="date_order"/>
