--- a/odoo14/pantaq_asn/views/purchase_order.xml
+++ b/odoo14/pantaq_asn/views/purchase_order.xml
@@ -7,8 +7,15 @@
             <field name="arch" type="xml">
                 <xpath expr="//header" position="inside">
                     <field name="asn_done" invisible="1"/>
+                    <field name="po_type" invisible="1"/>
                     <button name="create_asn" string="Create ASN" type="object" class="oe_highlight"
-                            attrs="{'invisible': [('asn_done','=',True)]}"/>
+                            attrs="{'invisible': ['|',('asn_done','=',True),('po_type','=','rfq')]}"/>
+                </xpath>
+                <xpath expr="//field[@name='currency_id']" position="after">
+                    <field name="rfq_ref" string="RFQ Reference" attrs="{'invisible':[('rfq_ref','=',False)]}"/>
+                </xpath>
+                <xpath expr="//field[@name='currency_id']" position="after">
+                    <field name="po_ref" string="PO Reference" attrs="{'invisible':[('po_ref','=',False)]}"/>
                 </xpath>
             </field>
         </record>
@@ -20,8 +27,9 @@
             <field name="arch" type="xml">
                 <xpath expr="//header" position="inside">
                     <field name="asn_done" invisible="1"/>
+                    <field name="po_type" invisible="1"/>
                     <button name="create_asn" string="Create ASN" type="object" class="oe_highlight"
-                            attrs="{'invisible': ['|',('asn_done','=',True),('state','not in','purchase')]}"/>
+                            attrs="{'invisible': ['|','|',('asn_done','=',True),('state','not in','purchase'),('po_type','=','rfq')]}"/>
                 </xpath>
                 <xpath expr="//div[hasclass('oe_button_box')]" position="inside">
                     <button type="object"
@@ -32,7 +40,11 @@
                     </button>
                 </xpath>
                 <xpath expr="//field[@name='currency_id']" position="after">
-                    <field name="rfq_ref" string="RFQ Reference"/>
+                    <field name="rfq_ref" string="RFQ Reference" attrs="{'invisible':[('rfq_ref','=',False)]}"/>
+                    <field name="po_ref" string="PO Reference" attrs="{'invisible':[('po_ref','=',False)]}"/>
+                </xpath>
+                <xpath expr="//field[@name='currency_id']" position="after">
+                    <field name="po_ref" string="PO Reference" attrs="{'invisible':[('po_ref','=',False)]}"/>
                 </xpath>
             </field>
         </record>
