--- a/odoo14/pantaq_asn/views/stock_picking.xml
+++ b/odoo14/pantaq_asn/views/stock_picking.xml
@@ -59,19 +59,19 @@
         </field>
     </record>
 
-    <record id="pq_stock_return_picking_inherit" model="ir.ui.view">
-        <field name="name">pq.stock.return.picking.inherit.form</field>
-        <field name="inherit_id" ref="stock.view_stock_return_picking_form"/>
-        <field name="model">stock.return.picking</field>
-        <field name="arch" type="xml">
-            <xpath expr="//field[@name='product_return_moves']/tree" position="inside">
-                <field name="lot_id" domain="[('id', 'in', self.product_return_moves.move_id.move_line_ids.lot_ids)]"/>
-<!--                       context="{'default_product_id': product_id, 'default_company_id': company_id}"-->
-<!--                       attrs="{'invisible': ['|',('product_id', '=', False),('tracking', '=', 'none')], 'required': [('tracking', '!=', 'none')]}"-->
-<!--                       groups="stock.group_production_lot"/>/>-->
-            </xpath>
-        </field>
-    </record>
+<!--    <record id="pq_stock_return_picking_inherit" model="ir.ui.view">-->
+<!--        <field name="name">pq.stock.return.picking.inherit.form</field>-->
+<!--        <field name="inherit_id" ref="stock.view_stock_return_picking_form"/>-->
+<!--        <field name="model">stock.return.picking</field>-->
+<!--        <field name="arch" type="xml">-->
+<!--            <xpath expr="//field[@name='product_return_moves']/tree" position="inside">-->
+<!--                <field name="lot_id" domain="[('id', 'in', self.product_return_moves.move_id.move_line_ids.lot_ids)]"/>-->
+<!--&lt;!&ndash;                       context="{'default_product_id': product_id, 'default_company_id': company_id}"&ndash;&gt;-->
+<!--&lt;!&ndash;                       attrs="{'invisible': ['|',('product_id', '=', False),('tracking', '=', 'none')], 'required': [('tracking', '!=', 'none')]}"&ndash;&gt;-->
+<!--&lt;!&ndash;                       groups="stock.group_production_lot"/>/>&ndash;&gt;-->
+<!--            </xpath>-->
+<!--        </field>-->
+<!--    </record>-->
 </odoo>
 
 
